# linearalgebra

./: CMakeLists.txt
include/matrix/: matrix.h  matrix_impl.h  matrix_slice.h
test/: MatrixSlice.cpp  MatrixTest.cpp
